@@ -1,5 +1,5 @@
-Monte Carlo eXtreme (MCX) was written by Qianqian Fang
-Qianqian is currently an instructor at Massachusetts General Hospital,
+Monte Carlo eXtreme (MCX) was written by Qianqian Fang, PhD.
+Dr. Fang is currently an Instructor at Massachusetts General Hospital,
 Harvard Medical School.
 
 Address: Martinos Center for Biomedical Imaging,
