@@ -3,7 +3,6 @@
 == Short term projects ==
 
 *. support NIFTI input & output [2009/04/30, FangQ]
-*. multiple-GPU support [2009/09/30, FangQ]
 *. support object description file to produce volume at run-time [2010/07/29, FangQ]
 *. extend the reflection model to support mis-match at internal boundaries [2010/07/29, FangQ]
 
@@ -26,3 +25,4 @@
 [done] *. OpenCL variant of MCX [2009/10/21, FangQ] [2010/02/10, FangQ]
 [dropped] *. Brook+ variant of MCX [2009/10/21, FangQ]
 [dropped] *. support ini based input file format (or perl script format) [2009/04/30, FangQ]
+[dropped] *. multiple-GPU support [2009/09/30, FangQ]
